--- a/themes/home/bang-gia.html
+++ b/themes/home/bang-gia.html
@@ -208,246 +208,64 @@
     </header>
     <script src="Header/header_20_0_0/js/header_20_0_0.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="Home/slider_1_0_1/css/slider_1_0_1.css" />
-    <section class="slider_1_0_1">
-        <div class="slide_thumb2">
-            <a href="#" class="slider_1_0_1_item">
-                <img src="images/slider-1.jpg" alt="">
-            </a>
-        </div>
+    <link rel="stylesheet" type="text/css" href="Post/post_4_1_0/css/post_4_1_0.css" />
 
-    </section>
-
-
-    <link rel="stylesheet" type="text/css" href="Home/service_15_0_0/css/service_15_0_0.css" />
-    <div class="service_15_0_0">
+    <section class="post_4_1_0">
         <div class="container">
-            <div class="service_15_0_0__box">
-                <div class="service_15_0_0__box2">
-                    <img src="images/t2-3.jpg" alt="">
-                    <div class="service_15_0_0__box3">
-                        <div class="service_15_0_0__title3">
-                            PHẪU THUẬT CĂNG DA
-                        </div>
-                    </div>
-                </div>
-                <div class="service_15_0_0__boxCt">
-                    <div class="service_15_0_0__title">DỊCH VỤ NỔI BẬT</div>
-                    <div class="service_15_0_0__box1">
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/catmi.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT TẠO MẮT 2 MÍ</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/nangmui.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT NÂNG MŨI KẾT HỢP CHẤT LIỆU ĐỘN</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/chinhham.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT CHỈNH SỬA GÓC HÀM</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/nangnguc.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT NÂNG VÚ BẰNG TÚI ĐỘN NGỰC</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/hutmo.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">HÚT MỠ</a></div>
-                            </a>
-                        </div>
-                        <div class="service_15_0_0__item">
-                            <a href="">
-                                <img src="images/cangda.jpg" alt="">
-                                <div class="service_15_0_0__content"><a href="/">PT CĂNG DA</a></div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+            <div class="post_4_1_0__content-top">
+                <h3 class="post_4_1_0__title">
+                    Danh mục bảng giá dịch vụ
+                    <br> Bệnh viện thẩm mỹ kangnam sài gòn
+                </h3>
+                <div class="post_4_1_0__line"></div>
+                <p>(Ban hành kèm theo Quyết định số 0112/QĐ-KNSG-2020 ngày 01 tháng 12 năm 2020 của Giám đốc Công ty TNHH Bệnh viện Thẩm mỹ Kangnam Sài Gòn về việc công bố Bảng giá dịch vụ khám bệnh, chữa bệnh tại Bệnh viện Thẩm mỹ Kangnam Sài Gòn)</p>
             </div>
+            <div class="post_4_1_0__main">
+                <table class="post_4_1_0__table">
+                    <tr>
+                        <th>STT</th>
+                        <th style="width: 10%;">STT T43 &T21</th>
+                        <th>Danh mục kỹ thuật</th>
+                        <th style="width: 15%;"> Bảng giá dịch vụ</th>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <th>2</th>
+                        <th>3</th>
+                        <th>4</th>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th>V.DA LIỄU</th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td><b>A. NỘI KHOA</b></td>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <td style="text-align:center">1</td>
+                        <td style="text-align:center">3.</td>
+                        <td>Điều trị bệnh da bằng ngâm, tắm</td>
+                        <td style="text-align:end">2,000,000</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td><b>B. NGOẠI KHOA</b></td>
+                        <td></td>
+                    </tr>
 
-        </div>
-    </div>
-
-
-    <link rel="stylesheet" type="text/css" href="Home/person_11_0_0/css/person_11_0_0.css" />
-    <div class="person_11_0_0">
-        <div class="container">
-            <div class="person_11_0_0_box">
-                <div>
-                    <div class="person_11_0_0__item">
-                        <img src="images/per-pic1.jpg" alt="">
-                        <div class="person_11_0_0__itemten">
-                            QUÁN QUÂN HTLX MÙA 5
-                            <p>TRẦN THỊ THU HIỀN</p>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="person_11_0_0__item">
-                        <img src="images/per-pic2.jpg" alt="">
-                        <div class="person_11_0_0__itemten">
-                            BEAUTYUP
-                            <p>DV: BẢO TIÊN</p>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="person_11_0_0__item">
-                        <img src="images/per-pic3.jpg" alt="">
-                        <div class="person_11_0_0__itemten">
-                            Á QUÂN HTLX MÙA 4
-                            <p>PHAN THỊ MAY</p>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <div class="person_11_0_0__item">
-                        <img src="images/per-pic1.jpg" alt="">
-                        <div class="person_11_0_0__itemten">
-                            QUÁN QUÂN HTLX MÙA 5
-                            <p>TRẦN THỊ THU HIỀN</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="Home/person_11_0_0/js/person_11_0_0.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="Home/video_12_0_0/css/video_12_0_0.css" />
-    <div class="video_12_0_0">
-        <div class="container">
-            <div class="video_12_0_0__title">
-                VIDEO NỔI BẬT
-            </div>
-            <div class="video_12_0_0__box">
-                <div class="video_12_0_0__video1">
-                    <div class="item1">
-                        <a href="#" class="modal-btn modal-clip" data-video="clze85py9JU" data-modal="modal-clip">
-                            <div class="pic">
-                                <img src="images/thumb-vid-1.jpg">
-                            </div>
-                            <div class="desc">
-                                Nhật ký Phẫu thuật thẩm mỹ của Hot Tiktoker Hồng Anh
-                            </div>
-                        </a>
-                    </div>
-
-                </div>
-                <div class="video_12_0_0__video2">
-
-                    <div class="item2">
-                        <a href="#" class="modal-btn modal-clip pic pic2" data-video="F1eR4TIKKrQ" data-modal="modal-clip">
-                            <img src="images/thumb-vid-2.jpg">
-                            <div class="desc">
-                                Diễn viên Bảo Tiên lột xác nóng bỏng sau nâng ngực
-                            </div>
-                        </a>
-                        <div class="desc2">
-                            Nhật ký "độ loa" của diễn viên Bảo Tiên
-                        </div>
-                    </div>
-                    <div class="item2">
-                        <a href="#" class="modal-btn modal-clip pic pic2" data-video="W2yJZcDHUuM" data-modal="modal-clip">
-                            <img src="images/thumb-vid-4.jpg">
-                            <div class="desc">
-                                Nhật ký Hút mỡ của ca sĩ “ngoại cỡ” Philippines - Alvir Antoine
-                            </div>
-                        </a>
-                        <div class="desc2">
-                            Ca sĩ Philipines và hành trình Hút mỡ tại Kangnam
-                        </div>
-                    </div>
-                    <div class="item2">
-                        <a href="#" class="modal-btn modal-clip pic pic2" data-video="trkW98oGg2E" data-modal="modal-clip">
-
-                            <img src="images/thumb-vid-3.jpg">
-                            <div class="desc">
-                                Hành trình chinh phục Đại sứ hoàn mỹ của người đẹp chuyển giới Trần Ngọc Sang
-                            </div>
-                        </a>
-                        <div class="desc2">
-                            Trần Ngọc Sang thẩm mỹ theo đổi ước mơ
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <link rel="stylesheet" type="text/css" href="Home/person_12_0_0/css/person_12_0_0.css" />
-    <section class="person_12_0_0">
-        <div class="person_12_0_0__container container">
-
-            <picture>
-                <source media="(max-width:540px) " srcset="images/person-mb.jpg">
-                <img class="person_12_0_0__person" src="images/person-pc.jpg">
-
-            </picture>
-            <div class="person_12_0_0__box">
-                <div class="person_12_0_0__title">
-                    <img src='images/person-title.png' class="person_12_0_0__title-img" />
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <link rel="stylesheet" type="text/css" href="Home/basis_9_0_0/css/basis_9_0_0.css" />
-    <div class="basis_9_0_0">
-        <div class="container">
-            <div class="basis_9_0_0__box">
-                <div class="basis_9_0_0__title">
-                    <p class="basis_9_0_0_tt">THẨM MỸ TIÊN PHONG</p>
-                    <p class="basis_9_0_0_cn">
-                        <B>CÔNG NGHỆ</B> HÀN QUỐC</p>
-                    <p class="basis_9_0_0_tp">
-                        Tiên phong cập nhật & chuyển giao công nghệ, máy móc tân tiến từ Hàn Quốc, Hoa Kỳ,... đem đến giải pháp thẩm mỹ tối ưu</p>
-                </div>
-                <img class="basis_9_0_0-mb" src="images/basis-mb.jpg" />
-            </div>
-        </div>
-    </div>
-
-    <link rel="stylesheet" type="text/css" href="Home/doctor_10_0_0/css/doctor_10_0_0.css" />
-    <section class="doctor_10_0_0">
-        <div class="container">
-            <div class="doctor_10_0_0__box">
-                <div class="doctor_10_0_0__item">
-                    <img src="images/person-logo.jpg" />
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-1.jpg" />
-                    <span>BS. Hà Văn Dần</span>
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-2.jpg" />
-                    <span>BS. Nguyễn Quốc Chí</span>
-
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-3.jpg" />
-                    <span>BS. Hoàng Hữu Tùng</span>
-
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-4.jpg" />
-                    <span>BS. Huỳnh Luân</span>
-
-                </div>
-                <div class="doctor_10_0_0__item">
-                    <img src="images/doctor-5.jpg" />
-                    <span>BS. Bùi Đức Nhiên</span>
-
-                </div>
+                    <tr id="row">
+                        <td></td>
+                        <td></td>
+                        <td><b>1. Thủ thuật</b></td>
+                        <td></td>
+                    </tr>
+                </table>
             </div>
         </div>
     </section>
@@ -498,7 +316,97 @@
             </div>
         </div>
     </section>
+    <script>
+        const data = [{
+            id: 4,
+            item: 'Điều trị sủi mào gà bằng Laser CO2',
+            price: '1,000,000'
+        }, {
+            id: 5,
+            item: 'Điều trị hạt cơm bằng Laser CO2',
+            price: '1,000,000'
+        }, {
+            id: 6,
+            item: 'Điều trị u ống tuyến mồ hôi bằng Laser CO2',
+            price: '2,000,000'
+        }, {
+            id: 7,
+            item: 'Điều trị u mềm treo bằng Laser CO2',
+            price: '2,000,000'
+        }, {
+            id: 8,
+            item: 'Điều trị dày sừng da đầu bằng Laser CO2',
+            price: '2,000,000'
+        }, {
+            id: 9,
+            item: 'Điều trị dày sừng ánh nắng bằng Laser CO2',
+            price: '2,000,000'
+        }, {
+            id: 10,
+            item: 'Điều trị sần cục bằng Laser CO2',
+            price: '1,000,000'
+        }, {
+            id: 11,
+            item: 'Điều trị bớt sùi bằng Laser CO2',
+            price: '1,000,000'
+        }, {
+            id: 12,
+            item: 'Điều trị rụng tóc bằng tiêm Triamcinolon dưới da',
+            price: '500,000'
+        }, {
+            id: 24,
+            item: 'Điều trị sẹo lồi bằng tiêm Triamcinolon trong thương tổn',
+            price: '700,000'
+        }, {
+            id: 26,
+            item: 'Điều trị bớt tăng sắc tố bằng YAG-KTP',
+            price: '700,000'
+        }, {
+            id: 27,
+            item: 'Xóa xăm bằng YAG-KTP',
+            price: '1,500,000'
+        }, {
+            id: 28,
+            item: 'Điều trị sẹo lồi YAG-KTP',
+            price: '2,000,000'
+        }, {
+            id: 32,
+            item: 'Điều trị u mạch máu bằng IPL(Intense Pulsed Light)',
+            price: '2,500,000'
+        }, {
+            id: 33,
+            item: 'Điều trị giãn mạch máu bằng IPL',
+            price: '2,500,000'
+        }, {
+            id: 34,
+            item: 'Điều chứng tăng sắc tố bằng IPL',
+            price: '2,000,000'
+        }, {
+            id: 35,
+            item: 'Điều trị chứng rậm lông bằng IPL',
+            price: '2,000,000'
+        }, {
+            id: 36,
+            item: 'Điều trị sẹo lồi bằng IPL',
+            price: '2,000,000'
+        }, {
+            id: 37,
+            item: 'Điều trị trứng cá bằng IPL',
+            price: '2,000,000'
+        }]
 
+        const row = document.querySelector('#row');
+        let table = '';
+        data.filter((e, idx) => {
+            table += `<tr>
+                <td style='text-align:center'>${idx+2}</td>
+                <td style='text-align:center'>${e.id}.</td>
+                <td>${e.item}</td>
+                <td style='text-align:end'>${e.price}</td>
+                </tr>`;
+        })
+        row.insertAdjacentHTML('afterend', table);
+    </script>
     <script>
         function imgTheme(path, tag) {
             let x = document.querySelectorAll(tag);
@@ -518,15 +426,9 @@
             }
         }
         imgTheme('Header/header_20_0_0/', '.header_20_0_0 img')
-        imgTheme('Home/slider_1_0_1/', '.slider_1_0_1 img')
-        sourceTheme('Home/slider_1_0_1/', '.slider_1_0_1 source')
-        sourceTheme('Home/person_12_0_0/', '.person_12_0_0 source')
-        imgTheme('Home/service_15_0_0/', '.service_15_0_0 img')
-        imgTheme('Home/person_11_0_0/', '.person_11_0_0 img')
-        imgTheme('Home/video_12_0_0/', '.video_12_0_0 img')
-        imgTheme('Home/person_12_0_0/', '.person_12_0_0 img')
-        imgTheme('Home/basis_9_0_0/', '.basis_9_0_0 img')
-        imgTheme('Home/doctor_10_0_0/', '.doctor_10_0_0 img')
+        imgTheme('Post/post_4_0_0/', '.post_4_0_0 img')
+        sourceTheme('Post/post_4_0_0/', '.post_4_0_0 source')
+
 
         imgTheme('Footer/footer_5_0_0/', '.footer_5_0_0 img')
     </script>
