--- a/themes/home/gioi-thieu.html
+++ b/themes/home/gioi-thieu.html
@@ -65,7 +65,7 @@
                                 <a href="#" class="header_20_0_0__box__item arr">Dịch vụ</a>
                             </li>
                             <li class="menuSub">
-                                <a href="#" class="header_20_0_0__box__item arr">Bảng giá</a>
+                                <a href="bang-gia.html" class="header_20_0_0__box__item arr">Bảng giá</a>
                             </li>
                             <li class="menuSub">
                                 <a href="#" class="header_20_0_0__box__item arr">Liên hệ</a>
