--- a/Home/basis_3_1_0/index.html
+++ b/Home/basis_3_1_0/index.html
@@ -1,27 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>basis_3_1_0</title>
-    <link rel="stylesheet" href="scss/basis_3_1_0__main.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <section class="basis_3_1_0">
-        <div class="basis_3_1_0__temp temp1">
-            <div class="temp1__t1"><img src="img/t1-bg.jpg" alt=""><h3>ĐỘI NGŨ CHUYÊN GIA HÀNG ĐẦU</h3></div>
-            <div class="temp1__t2"><img src="img/t2-bg.jpg" alt=""><h3>CÔNG NGHỆ TÂN TIẾN <br> HIỆN ĐẠI BẬC NHẤT</h3></div>
-            <div class="temp1__t3"><img src="img/t3-bg.jpg" alt=""><h3>QUY TRÌNH CHUẨN CHÂU ÂU</h3></div>
+        <div class="basis_3_1_0__group">
+
+            <div class="basis_3_1_0__left">
+                <div class="basis_3_1_0__box">
+                    <div class="text">ĐỘI NGŨ CHUYÊN GIA HÀNG ĐẦU</div>
+                    <img src="img/t1-bg.jpg" alt="">
+
+                </div>
+                <div class="basis_3_1_0__box">
+                    <div class="text">CÔNG NGHỆ TÂN TIẾN <br> HIỆN ĐẠI BẬC NHẤT</div>
+                    <img src="img/t2-bg.jpg" alt="">
+
+                </div>
+                <div class="basis_3_1_0__box">
+                    <div class="text">QUY TRÌNH CHUẨN CHÂU ÂU</div>
+                    <img src="img/t3-bg.jpg" alt="">
+
+                </div>
+            </div>
+            <div class="basis_3_1_0__title">
+                <div class="basis_3_1_0__box">
+                    <div class="text">ĐỊA CHỈ <br> <br> NHA KHOA <br> <br> THẨM MỸ <br> <br> UY TÍN <br> <br> HÀNG ĐẦU <br> <br> VIỆT NAM</div>
+                    <img src="img/t4-bg.jpg" alt="">
+
+                </div>
+            </div>
         </div>
-        <div class="basis_3_1_0__temp temp2">
-            <img src="img/t4-bg.jpg" alt=""><h3>ĐỊA CHỈ <br> <br> NHA KHOA <br> <br> THẨM MỸ <br> <br> UY TÍN <br> <br> HÀNG ĐẦU <br> <br> VIỆT NAM</h3>
-        </div>
-        <div class="basis_3_1_0__temp temp3">
-            <div class="temp3__t5"><img src="img/t5-bg.jpg" alt=""><h3>HỆ THỐNG MÁY MÓC <br> TRANG THIẾT BỊ HIỆN ĐẠI</h3></div>
-            <div class="temp3__t6"><img src="img/t6-bg.jpg" alt=""><h3>CAM KẾT CHẤT LƯỢNG <br> BẢO HÀNH TRỌN ĐỜI</h3></div>
-            <div class="temp3__t7"><img src="img/t7-bg.jpg" alt=""><h3>HỆ THỐNG 13 CHI NHÁNH NHA KHOA <br> TRỤC THUỘC BỆNH VIỆN TỪ BẮC VÀO NAM</h3></div>
+        <div class="basis_3_1_0__right">
+            <div class="basis_3_1_0__box">
+                <div class="text">HỆ THỐNG MÁY MÓC <br> TRANG THIẾT BỊ HIỆN ĐẠI</div>
+                <img src="img/t5-bg.jpg" alt="">
+
+            </div>
+            <div class="basis_3_1_0__box">
+                <div class="text">CAM KẾT CHẤT LƯỢNG <br> BẢO HÀNH TRỌN ĐỜI</div>
+                <img src="img/t6-bg.jpg" alt="">
+
+            </div>
+            <div class="basis_3_1_0__box">
+                <div class="text">HỆ THỐNG 13 CHI NHÁNH NHA KHOA <br> TRỰC THUỘC TỪ BẮC VÀO NAM</div>
+                <img src="img/t7-bg.jpg" alt="">
+
+            </div>
         </div>
     </section>
 </body>
+
 </html>
