--- a/themes/home/bang-gia.html
+++ b/themes/home/bang-gia.html
@@ -68,7 +68,7 @@
                                 <a href="bang-gia.html" class="header_20_0_0__box__item arr">Bảng giá</a>
                             </li>
                             <li class="menuSub">
-                                <a href="#" class="header_20_0_0__box__item arr">Liên hệ</a>
+                                <a href="lien-he.html" class="header_20_0_0__box__item arr">Liên hệ</a>
                             </li>
                             <li class="menuSub">
                                 <a href="chat-luong/index.html" class="header_20_0_0__box__item arr" target="_blank">Chất lượng</a>
@@ -426,8 +426,8 @@
             }
         }
         imgTheme('Header/header_20_0_0/', '.header_20_0_0 img')
-        imgTheme('Post/post_4_0_0/', '.post_4_0_0 img')
-        sourceTheme('Post/post_4_0_0/', '.post_4_0_0 source')
+        imgTheme('Post/post_4_1_0/', '.post_4_1_0 img')
+        sourceTheme('Post/post_4_1_0/', '.post_4_1_0 source')
 
 
         imgTheme('Footer/footer_5_0_0/', '.footer_5_0_0 img')
