--- a/themes/home/index.html
+++ b/themes/home/index.html
@@ -68,7 +68,7 @@
                                 <a href="bang-gia.html" class="header_20_0_0__box__item arr">Bảng giá</a>
                             </li>
                             <li class="menuSub">
-                                <a href="#" class="header_20_0_0__box__item arr">Liên hệ</a>
+                                <a href="lien-he.html" class="header_20_0_0__box__item arr">Liên hệ</a>
                             </li>
                             <li class="menuSub">
                                 <a href="chat-luong/index.html" class="header_20_0_0__box__item arr" target="_blank">Chất lượng</a>
