--- a/themes/home/lien-he.html
+++ b/themes/home/lien-he.html
@@ -208,105 +208,71 @@
     </header>
     <script src="Header/header_20_0_0/js/header_20_0_0.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="Post/post_4_0_0/css/post_4_0_0.css" />
-    <section class="post_4_0_0">
-        <div class="post_4_0_0_byt">
-            <div class="post_4_0_0_byt__wrapper container">
-                <img class="post_4_0_0_byt__logo" src='images/logo-byt.png?ver=1' />
-                <div class="post_4_0_0_byt__container">
-                    <span class="post_4_0_0_byt__title">Bệnh viện thẩm mỹ Kangnam Sài Gòn </span>
-                    <span class="post_4_0_0_byt__desc">Được bộ y tế cấp phép</span>
+    <link rel="stylesheet" type="text/css" href="Post/post_4_2_0/css/post_4_2_0.css" />
+    <section class="post_4_2_0">
+        <div class="container">
+            <div class="post_4_2_0__title">
+                <span class="post_4_2_0__title-up">Bệnh viện thẩm mĩ Kangnam Sài Gòn</span>
+                <span class="post_4_2_0__title-down">Thông tin liên hệ</span>
+            </div>
+            <div class="post_4_2_0__line"></div>
+            <div class="post_4_2_0__main">
+                <div class="post_4_2_0__box">
+                    <div class="post_4_2_0__box-left ">
+                        <span class="post_4_2_0__box-title">
+                            <img src='images/mark.png'/>
+                            <p>Địa chỉ:</p>
+                        </span>
+                    </div>
+                    <div class="post_4_2_0__box-right">
+                        <span class="post_4_2_0__box-desc">666 Cách mạng tháng 8, P.5. Q. Tân Bình, Tp.HCM </span>
+                    </div>
+                </div>
 
+                <div class="post_4_2_0__boxMid">
+                    <div class="post_4_2_0__boxMid-left">
+                        <span class="post_4_2_0__boxMid-title">
+                            <img src='images/phone.png'/>
+                            <p>Hotline:</p>
+                        </span>
+                        <span class="post_4_2_0__boxMid-title">
+                            <img src='images/phone.png'/>
+                            <p>Zalo/ Viber:</p>
+                        </span>
+                        <span class="post_4_2_0__boxMid-title">
+                            <img src='images/facebook.png'/>
+                            <p>Facebook:</p>
+                        </span>
+                        <span class="post_4_2_0__boxMid-title">
+                            <img src='images/youtube.png'/>
+                            <p>Youtube:</p>
+                        </span>
+                    </div>
+                    <div class="post_4_2_0__boxMid-right">
+                        <span class="post_4_2_0__box-desc" style="color:#ff6000">19006466 </span>
+                        <span class="post_4_2_0__box-desc"> 0969999777</span>
+                        <span class="post_4_2_0__box-desc">https://www.facebook.com/Thammykangnam </span>
+                        <span class="post_4_2_0__box-desc">https://www.youtube.com/c/ThammyKangnam</span>
+
+                    </div>
+                </div>
+
+                <div class="post_4_2_0__box">
+                    <div class="post_4_2_0__box-left ">
+                        <span class="post_4_2_0__box-title">
+                            <img src='images/calender.png'/>
+                            <p>Lịch làm việc:</p>
+                        </span>
+                    </div>
+                    <div class="post_4_2_0__box-right">
+                        <span class="post_4_2_0__box-desc">Tất cả các ngày trong tuần <br><span style="color:#ff6000">7:00 - 18:00</span> hàng ngày</span>
+                    </div>
                 </div>
             </div>
         </div>
-        <section class="post_4_0_0_history">
-            <div class="post_4_0_0_history__wrapper container">
-                <div class="post_4_0_0_history__content">
-                    <span class="post_4_4_0-title">I. Lịch sử hình thành và phát triển</span>
-                    <p>Bệnh viện Thẩm mỹ Kangnam Sài Gòn chính thức ra mắt ngày <b>3/12/2020</b>, được Bộ Y Tế cấp phép hoạt động khám bệnh, chữa bệnh với tư cách Bệnh viện chuyên khoa</p>
-                    <p>Kangnam Sài Gòn đầu tư cơ sở vật chất, trang thiết bị y tế hiện đại, cập nhật những công nghệ mới nhất về thẩm mỹ, thực hiện đa dạng các dịch vụ với danh mục đầy đủ hơn 500 dịch vụ. </p>
-                    <p>Với đội ngũ y bác sĩ, điều dưỡng dày dặn kinh nghiệm, có chứng chỉ hành nghệ và được đào tạo bài bản, Bệnh viện thẩm mỹ Kangnam Sài Gòn mong muốn sẽ đem đến cho khách hàng kết quả dịch vụ như ý và trải nghiệm khách hàng tuyệt vời nhất.
-                    </p>
-                </div>
-                <img src='images/kangnam-SG.jpg' />
-            </div>
-        </section>
-        <section class="post_4_0_0_intro">
-            <div class="container">
-                <span class="post_4_4_0-title">II. Sơ đồ tổ chức</span>
-                <img class="post_4_0_0_intro-img" src='images/diagram.jpg' />
-                <button class="post_4_0_0_intro-btn">Click để phóng to</button>
-            </div>
-        </section>
-        <section class="post_4_0_0_hr">
-            <div class="container">
-                <span class="post_4_4_0-title">III. Bộ máy nhân sự</span>
-                <div class="post_4_0_0_hr__content">
-
-                    <div class="post_4_0_0_hr__main">
-                        <div class="post_4_0_0_hr__title">Ban giám đốc</div>
-                        <ul class="post_4_0_0_hr__box1">
-                            <li>Giám đốc chuyên môn</li>
-                            <li style="border:none">Giám đốc vận hành</li>
-                        </ul>
-                        <ul class="post_4_0_0_hr__box2">
-                            <li>BS.CKI Lê Văn Quý</li>
-                            <li style="border:none">CN. Lê Thị Minh Đương</li>
-                        </ul>
-                    </div>
-
-                    <div class="post_4_0_0_hr__main">
-                        <div class="post_4_0_0_hr__title">Phòng chức năng</div>
-                        <ul class="post_4_0_0_hr__box1">
-                            <li>Phòng KHTH – CLBV</li>
-                            <li>Phòng HCNS</li>
-                            <li>Phòng tài chính – Kế toán</li>
-                            <li>Phòng Điều dưỡng KSNK</li>
-                            <li style="border:none">Phòng DVKH</li>
-                        </ul>
-                        <ul class="post_4_0_0_hr__box2">
-                            <li>BS. CKI Lê Viết Thanh</li>
-                            <li>CN. Hồ Thị Xuân Trang</li>
-                            <li>CN Đinh Thị Phương</li>
-                            <li>CNĐD. Nguyễn Thị Huyền Trang</li>
-                            <li style="border:none">Trương Thị Hồng Ngọc</li>
-                        </ul>
-                    </div>
-
-                    <div class="post_4_0_0_hr__main">
-                        <div class="post_4_0_0_hr__title">Khối lâm sàng</div>
-                        <ul class="post_4_0_0_hr__box1">
-                            <li>Khoa khám bệnh</li>
-                            <li>Khoa da liễu</li>
-                            <li>khoa Răng Hàm Mặt</li>
-                            <li>Khoa PTTM</li>
-                            <li style="border:none">Khoa GMHS</li>
-                        </ul>
-                        <ul class="post_4_0_0_hr__box2">
-                            <li>Bs. Bùi Đức Nhiên</li>
-                            <li>Bs. CKI Lê Thị Thủy</li>
-                            <li>Bs. Nguyễn Thị Kiều Trinh</li>
-                            <li>Bs. CKI Lê Thanh Sĩ</li>
-                            <li style="border:none">BS. CKII Trần Thị Ngọc Phượng</li>
-                        </ul>
-                    </div>
-
-                    <div class="post_4_0_0_hr__main">
-                        <div class="post_4_0_0_hr__title">Khối cận lâm sàng</div>
-                        <ul class="post_4_0_0_hr__box1">
-                            <li>Khoa Cận Lâm Sàng</li>
-                            <li style="border:none">Trưởng Khoa Dược - Thiết bị </li>
-                        </ul>
-                        <ul class="post_4_0_0_hr__box2">
-                            <li>Bs. CKI Nguyễn Quốc Tuấn</li>
-                            <li style="border:none">Ds. ĐH. Kiều Thị Huyền Trinh</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
     </section>
+
+
     <link rel="stylesheet" type="text/css" href="Footer/footer_5_0_0/css/footer_5_0_0.css" />
     <section class="footer_5_0_0">
         <div class="footer_5_0_0__container container">
@@ -373,8 +339,8 @@
             }
         }
         imgTheme('Header/header_20_0_0/', '.header_20_0_0 img')
-        imgTheme('Post/post_4_0_0/', '.post_4_0_0 img')
-        sourceTheme('Post/post_4_0_0/', '.post_4_0_0 source')
+        imgTheme('Post/post_4_2_0/', '.post_4_2_0 img')
+        sourceTheme('Post/post_4_2_0/', '.post_4_2_0 source')
 
 
         imgTheme('Footer/footer_5_0_0/', '.footer_5_0_0 img')
