--- a/themes/home/huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html
+++ b/themes/home/huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html
@@ -208,114 +208,79 @@
     </header>
     <script src="Header/header_20_0_0/js/header_20_0_0.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="Post/post_4_0_0/css/post_4_0_0.css" />
-    <section class="post_4_0_0">
-        <div class="post_4_0_0_byt">
-            <div class="post_4_0_0_byt__wrapper container">
-                <img class="post_4_0_0_byt__logo" src='images/logo-byt.png?ver=1' />
-                <div class="post_4_0_0_byt__container">
-                    <span class="post_4_0_0_byt__title">Bệnh viện thẩm mỹ Kangnam Sài Gòn </span>
-                    <span class="post_4_0_0_byt__desc">Được bộ y tế cấp phép</span>
+    <link rel="stylesheet" type="text/css" href="Post/post_4_3_0/css/post_4_3_0.css" />
+    <section class="post_4_3_0">
+        <div class="container">
+            <h3 class="post_4_3_0__header">Hướng dẫn chăm sóc và chế độ ăn uống sau phẫu thuật thẩm mỹ</h3>
+        </div>
+        <div class="post_4_3_0__header-desc">
+            <div class="container">
+                <p>Sau khi phẫu thuật thẩm mỹ, quá trình chăm sóc hậu phẫu và chế độ dinh dưỡng “chuẩn” sẽ giúp khách hàng nhanh chóng hồi phục và duy trì kết quả thẩm mỹ ổn định, lâu dài. Đồng thời, tránh được tối đa các biến chứng sau thẩm mỹ do chế độ
+                    sinh hoạt sai cách. </p>
+            </div>
+        </div>
+        <div class="post_4_3_0__main">
+            <div class="container">
+                <div class="post_4_3_0__part1">
+                    <div class="post_4_3_0__part1-left">
+                        <h3 class="post_4_3_0__main-title1">I. Hướng dẫn chăm sóc sau phẫu thuật thẩm mỹ</h3>
+                        <p>Tùy từng dịch vụ thẩm mỹ mà các bác sĩ sẽ chỉ định chế độ chăm sóc hậu phẫu riêng. Đối với dịch vụ tiểu phẫu, khách hàng sẽ được nghỉ ngơi vài giờ, theo dõi tại bệnh viện sau đó được xuất viện trong ngày. </p>
+                        <p>Đối với dịch vụ đại phẫu khách hàng cần lưu trú tại bệnh viện từ 2-3 ngày.</p>
+                        <p>Mỗi dịch vụ sẽ có lịch tái khám để kiểm tra vết thương, cắt chỉ, tháo băng nẹp riêng.</p>
+                    </div>
+                    <img src='images/part-1.jpg' />
+                </div>
+                <div class='post_4_3_0__part2'>
+                    <h4 class="post_4_3_0__main-title2"> 1. Đối với thẩm mỹ tiểu phẫu như cắt mí, nâng mũi, độn cằm...</h4>
+                    <div>
+                        <p>- Cần thực hiện đúng theo hướng dẫn của bác sĩ</p>
+                        <p>- Tự vệ sinh vết thương tại gia bằng cách sát trùng nhẹ vết mổ bằng dung dịch nước muối sinh lý, hoặc betadine pha loãng với nước muối sinh lý hoặc đến bệnh viện các y tá thực hiện.</p>
+                        <p>- Uống thuốc đầy đủ theo đơn bác sỹ kê</p>
+                        <p>- Chườm lạnh trong 2 ngày đầu . Lưu ý kiểm tra nhiệt độ túi chườm bằng tay, lót một lớp gạc sạch ngăn cách túi chườm với bề mặt da, tránh gây bỏng nhiệt</p>
+                        <p>- Từ ngày thứ 4 trở đi thì chườm ấm để giảm sưng và thâm tí</p>
+                        <p>- Hạn chế tối đa va chạm mạnh tại vị trí đã thẩm mỹ</p>
+                        <p>- Hầu như với các dịch vụ tiểu phẫu chỉ sau 5-7 ngày khách hàng đã được cắt chỉ và sở hữu ngay nét đẹp như ý</p>
+                    </div>
+                </div>
+                <div class='post_4_3_0__part2'>
+                    <h4 class="post_4_3_0__main-title2">2. Đối với các thẩm mỹ đại phẫu như giảm mỡ, nâng ngực, hàm mặt…</h4>
+                    <div>
+                        <p>- Thay băng trong vòng 24h sau phẫu thuật và nghỉ ngơi theo dõi tại viện 1-3 ngày </p>
+                        <p>- Mang đai định hình ngay sau phẫu thuật để giúp hạn chế sưng nề, định hình phom</p>
+                        <p>- Nghỉ ngơi, vận động nhẹ nhàng hoàn toàn từ 7-10 ngày</p>
+                        <p>- Chú ý sử dụng thuốc đúng theo chỉ định của bác sỹ</p>
+                        <p>- Không đi xông hơi trong vòng 4 tuần sau phẫu thuật vì việc này có thể gây ảnh hưởng đến quá trình hồi phục</p>
+                        <p>- Băng định hình khách hàng sẽ đeo trong tối thiểu 1 tháng</p>
+                    </div>
+                </div>
+                <div class='post_4_3_0__part3'>
+                    <h3 class="post_4_3_0__main-title1">II. Chế độ dinh dưỡng sau phẫu thuật thẩm mỹ</h3>
+                    <img src='images/part-2.jpg' />
 
+                    <h4 class="post_4_3_0__main-title2">1. Chế độ kiêng sau phẫu thuật</h4>
+                    <div>
+                        <p>- Kiêng ăn thực phẩm gây sẹo lồi như rau muống; kiêng ăn các loại thực phẩm dễ gây ngứa, mưng mủ như thịt gà, hải sản, đồ nếp, đồ tanh…</p>
+                        <p>- Kiêng các thực phẩm ảnh hưởng tới sắc tố da như trứng, thịt bò; kiêng ăn đồ cay nóng; không sử dụng chất kích thích (bia, rượu, thuốc lá, cà phê…) vì những thực phẩm này khiến quá trình hồi phục vết thương kéo dài và tăng nguy
+                            cơ nhiễm trùng</p>
+                        <p>- Không sử dụng chất kích thích, đồ uống có cồn trong vòng tối thiểu 1 tháng</p>
+                    </div>
+                    <h4 class="post_4_3_0__main-title2">2. Chế độ ăn uống nên duy trì</h4>
+                    <div>
+                        <p>- Đối với thẩm mỹ khu vực hàm mặt trong vòng 7 - 10 ngày, tránh ăn các thức ăn cứng. Nên ăn đồ mềm như cháo (lưu ý ăn cháo gạo tẻ), súp, thực phẩm xay nhuyễn</p>
+                        <p>- Sử dụng các thực phẩm chức năng có chứa collagen, vitamin C, đồng, kẽm nhằm cung cấp đầy đủ dưỡng chất cho cơ thể. Như vậy, vết mổ sẽ đạt tính thẩm mỹ cao hơn.</p>
+                        <p>- Bổ sung chất béo lành mạnh có trong các loại hạt. Nhóm thực phẩm này có khả năng thúc đẩy quá trình hấp thụ vitamin từ rau củ quả, đồng thời tăng miễn dịch để giúp vết thương chóng lành, ngăn ngừa nhiễm trùng, sưng mủ.</p>
+                    </div>
+                    <div class='post_4_3_0__part2'>
+                        <b>
+                        <p>Các bác sỹ, tư vấn viên BVTM Kangnam Sài Gòn luôn sẵn sàng tư vấn khách hàng trước - trong - sau thẩm mỹ. Tư vấn viên của bệnh viện sẽ nhắc khi đến lịch tái khám nên khách hàng hoàn toàn yên tâm khi thực hiện phẫu thuật thẩm mỹ.</p>
+                        <p>Hoặc khách hàng liên hệ Hotline: 19006466 để được hướng dẫn chi tiết.</p>
+                    </b>
+                    </div>
+                    <div>
+                    </div>
                 </div>
             </div>
         </div>
-        <section class="post_4_0_0_history">
-            <div class="post_4_0_0_history__wrapper container">
-                <div class="post_4_0_0_history__content">
-                    <span class="post_4_4_0-title">I. Lịch sử hình thành và phát triển</span>
-                    <p>Bệnh viện Thẩm mỹ Kangnam Sài Gòn chính thức ra mắt ngày <b>3/12/2020</b>, được Bộ Y Tế cấp phép hoạt động khám bệnh, chữa bệnh với tư cách Bệnh viện chuyên khoa</p>
-                    <p>Kangnam Sài Gòn đầu tư cơ sở vật chất, trang thiết bị y tế hiện đại, cập nhật những công nghệ mới nhất về thẩm mỹ, thực hiện đa dạng các dịch vụ với danh mục đầy đủ hơn 500 dịch vụ. </p>
-                    <p>Với đội ngũ y bác sĩ, điều dưỡng dày dặn kinh nghiệm, có chứng chỉ hành nghệ và được đào tạo bài bản, Bệnh viện thẩm mỹ Kangnam Sài Gòn mong muốn sẽ đem đến cho khách hàng kết quả dịch vụ như ý và trải nghiệm khách hàng tuyệt vời nhất.
-                    </p>
-                </div>
-                <img src='images/kangnam-SG.jpg' />
-            </div>
-        </section>
-        <section class="post_4_0_0_intro">
-            <div class="container">
-                <span class="post_4_4_0-title">II. Sơ đồ tổ chức</span>
-                <img class="post_4_0_0_intro-img " src='images/diagram.jpg' />
-                <a class="post_4_0_0_intro-btn modal-btn" data-modal="modal-pic">Click để phóng to</a>
-                <div class="modal" id="modal-pic">
-                    <div class="modal-closePic">&times;</div>
-                    <div class="modal-bg"></div>
-                    <div class="modal-box modal-box-img animate-zoom">
-                        <div class="modal-pic">
-                            <img style="width:100%" src="images/diagram.jpg" alt="">
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="post_4_0_0_hr">
-            <div class="container">
-                <span class="post_4_4_0-title">III. Bộ máy nhân sự</span>
-                <div class="post_4_0_0_hr__content">
-
-                    <div class="post_4_0_0_hr__main">
-                        <div class="post_4_0_0_hr__title">Ban giám đốc</div>
-                        <ul class="post_4_0_0_hr__box1">
-                            <li>Giám đốc chuyên môn</li>
-                            <li style="border:none">Giám đốc vận hành</li>
-                        </ul>
-                        <ul class="post_4_0_0_hr__box2">
-                            <li>BS.CKI Lê Văn Quý</li>
-                            <li style="border:none">CN. Lê Thị Minh Đương</li>
-                        </ul>
-                    </div>
-
-                    <div class="post_4_0_0_hr__main">
-                        <div class="post_4_0_0_hr__title">Phòng chức năng</div>
-                        <ul class="post_4_0_0_hr__box1">
-                            <li>Phòng KHTH – CLBV</li>
-                            <li>Phòng HCNS</li>
-                            <li>Phòng tài chính – Kế toán</li>
-                            <li>Phòng Điều dưỡng KSNK</li>
-                            <li style="border:none">Phòng DVKH</li>
-                        </ul>
-                        <ul class="post_4_0_0_hr__box2">
-                            <li>BS. CKI Lê Viết Thanh</li>
-                            <li>CN. Hồ Thị Xuân Trang</li>
-                            <li>CN Đinh Thị Phương</li>
-                            <li>CNĐD. Nguyễn Thị Huyền Trang</li>
-                            <li style="border:none">Trương Thị Hồng Ngọc</li>
-                        </ul>
-                    </div>
-
-                    <div class="post_4_0_0_hr__main">
-                        <div class="post_4_0_0_hr__title">Khối lâm sàng</div>
-                        <ul class="post_4_0_0_hr__box1">
-                            <li>Khoa khám bệnh</li>
-                            <li>Khoa da liễu</li>
-                            <li>khoa Răng Hàm Mặt</li>
-                            <li>Khoa PTTM</li>
-                            <li style="border:none">Khoa GMHS</li>
-                        </ul>
-                        <ul class="post_4_0_0_hr__box2">
-                            <li>Bs. Bùi Đức Nhiên</li>
-                            <li>Bs. CKI Lê Thị Thủy</li>
-                            <li>Bs. Nguyễn Thị Kiều Trinh</li>
-                            <li>Bs. CKI Lê Thanh Sĩ</li>
-                            <li style="border:none">BS. CKII Trần Thị Ngọc Phượng</li>
-                        </ul>
-                    </div>
-
-                    <div class="post_4_0_0_hr__main">
-                        <div class="post_4_0_0_hr__title">Khối cận lâm sàng</div>
-                        <ul class="post_4_0_0_hr__box1">
-                            <li>Khoa Cận Lâm Sàng</li>
-                            <li style="border:none">Trưởng Khoa Dược - Thiết bị </li>
-                        </ul>
-                        <ul class="post_4_0_0_hr__box2">
-                            <li>Bs. CKI Nguyễn Quốc Tuấn</li>
-                            <li style="border:none">Ds. ĐH. Kiều Thị Huyền Trinh</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
     </section>
     <link rel="stylesheet" type="text/css" href="Footer/footer_5_0_0/css/footer_5_0_0.css" />
     <section class="footer_5_0_0">
@@ -383,8 +348,8 @@
             }
         }
         imgTheme('Header/header_20_0_0/', '.header_20_0_0 img')
-        imgTheme('Post/post_4_0_0/', '.post_4_0_0 img')
-        sourceTheme('Post/post_4_0_0/', '.post_4_0_0 source')
+        imgTheme('Post/post_4_3_0/', '.post_4_3_0 img')
+        sourceTheme('Post/post_4_3_0/', '.post_4_3_0 source')
 
 
         imgTheme('Footer/footer_5_0_0/', '.footer_5_0_0 img')
